--- a/index.html
+++ b/index.html
@@ -13,58 +13,69 @@
 <body>
     <div id="app" class="container">
         <div class="row">
-            <div class="col-12 mt-5">
+            <div class="col-12 d-flex mt-5">
                 <!-- SIDEBAR -->
-                <div class="container">
-                    <div class="col-4">
-                        <!-- HEADER -->
-                        <div class="headerLeft d-flex justify-content-between">
+                <div class="col-4">
+                    <!-- HEADER -->
+                    <div class="headerLeft d-flex justify-content-center">
+                        <div class="col-4 d-flex">
                             <img id="personalAvatar" src="./img/avatar_io.jpg" alt="user avatar" class="img-fluid">
-                            <div>
-                                <span>Sofia</span>
-                            </div>
-                            <div class="d-flex flex-row align-items-center justify-content-center">
-                                <div>😂</div>
-                                <div>😂</div>
-                                <div>😂</div>
-                            </div>
+                            <span class="align-self-center">Sofia</span>
                         </div>
-                        <!-- LEFT MAIN -->
-                        <div class="container">
-                            <div class="row">
-                                <!-- SPACE AZURE -->
-                                <div class="mainLeft">
+                        <div class="col-4 offset-4 d-flex flex-row align-items-center gap-2 justify-content-end pe-4">
+                            <div>😂</div>
+                            <div>😂</div>
+                            <div>😂</div>
+                        </div>
+                    </div>
+                    <!-- LEFT MAIN -->
+                    <div class="container">
+                        <div class="row">
+                            <!-- SPACE AZURE -->
+                            <div class="notification">
 
-                                </div>
-                            </div>
-                            <!-- SEARCH BAR -->
-                            <div class="row barHeight d-flex justify-content-center align-items-center">
-                                <div class="col-12 bg-white">
-                                    <div class="form">
-                                        <i class="fa fa-search"></i>
-                                        <input type="text" class="form-control form-input" placeholder="Cerca o inizia una nuova chat">
-                                    </div>                     
-                                </div>
                             </div>
                         </div>
-                        <!-- CONTACTS -->
-                        <div class="container box">
-                            <div class="row">
-                                <div v-for="(contact, i) in contacts" class="contacts col-12 d-flex justify-content-between">
-                                    <img :src="contacts[i].avatar" :alt="contacts[i].name" class="img-fluid">
-                                    <span>{{contacts[i].name}}</span>
-                                </div>
+                        <!-- SEARCH BAR -->
+                        <div class="row barHeight d-flex justify-content-center align-items-center">
+                            <div class="col-12 bg-white">
+                                <div class="form">
+                                    <i class="fa fa-search"></i>
+                                    <input type="text" class="form-control form-input" placeholder="Cerca o inizia una nuova chat">
+                                </div>                     
+                            </div>
+                        </div>
+                    </div>
+                    <!-- CONTACTS -->
+                    <div class="container box">
+                        <div class="row">
+                            <div v-for="(contact, i) in contacts" class="contacts col-12 d-flex justify-content-between">
+                                <img :src="contacts[i].avatar" :alt="contacts[i].name" class="img-fluid">
+                                <span>{{contacts[i].name}}</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-8">
-                    <div class="headerRight">
+                    <!-- HEADER -->
+                    <div class="headerRight d-flex justify-content-between">
+                        <div class="col-4 d-flex">
+                            <img id="personalAvatar" src="./img/avatar_io.jpg" alt="user avatar" class="img-fluid">
+                            <span class="align-self-center">Sofia</span>
+                        </div>
+                        <div class="col-4 offset-4 d-flex flex-row align-items-center gap-2 justify-content-end pe-4">
+                            <div>😂</div>
+                            <div>😂</div>
+                            <div>😂</div>
+                        </div>
+                    </div>
+                    <div class="mainRight">
 
                     </div>
-                    <div class="main-right">
-
-                    </div>
+                    <!-- FOOTER -->
+                    <footer>
+                        
+                    </footer>
                 </div>
             </div>
         </div>
