--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <!-- SIDEBAR -->
                 <div class="col-4">
                     <!-- HEADER -->
-                    <div class="headerLeft d-flex justify-content-center">
+                    <div class="my-header-left d-flex justify-content-center">
                         <div class="col-4 d-flex">
-                            <img id="personalAvatar" src="./img/avatar_io.jpg" alt="user avatar" class="img-fluid">
+                            <img id="my-personal-avatar" src="./img/avatar_io.jpg" alt="user avatar" class="img-fluid">
                             <span class="align-self-center">Sofia</span>
                         </div>
                         <div class="col-4 offset-4 d-flex flex-row align-items-center gap-2 justify-content-end pe-4">
@@ -32,12 +32,12 @@
                     <div class="container">
                         <div class="row">
                             <!-- SPACE AZURE -->
-                            <div class="notification">
+                            <div class="my-notification">
 
                             </div>
                         </div>
                         <!-- SEARCH BAR -->
-                        <div class="row barHeight d-flex justify-content-center align-items-center">
+                        <div class="row d-flex justify-content-center align-items-center">
                             <div class="col-12 bg-white">
                                 <div class="form">
                                     <i class="fa fa-search"></i>
@@ -47,21 +47,33 @@
                         </div>
                     </div>
                     <!-- CONTACTS -->
-                    <div class="container box">
+                    <div class="container my-box">
                         <div class="row">
-                            <div v-for="(contact, i) in contacts" class="contacts col-12 d-flex justify-content-between">
-                                <img :src="contacts[i].avatar" :alt="contacts[i].name" class="img-fluid">
-                                <span>{{contacts[i].name}}</span>
+                            <div v-for="(contact, i) in contacts" class="my-contacts d-flex justify-content-between align-items-center">
+                                <div class="col-4">
+                                    <img :src="contacts[i].avatar" :alt="contacts[i].name" class="img-fluid">
+                                </div>
+                                <div class="col-6">
+                                    <div class="d-flex flex-column justify-content-center">
+                                        <span class="fw-bolder">{{contacts[i].name}}</span>
+                                        <span class="fontLastMessage">Ultimo messaggio inviato</span>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="d-flex align-items-center justify-content-end">
+                                        <span>12:00</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-8">
                     <!-- HEADER -->
-                    <div class="headerRight d-flex justify-content-between">
+                    <div class="my-header-right d-flex justify-content-between">
                         <div class="col-4 d-flex">
-                            <img id="personalAvatar" src="./img/avatar_io.jpg" alt="user avatar" class="img-fluid">
-                            <span class="align-self-center">Sofia</span>
+                            <img id="personalAvatar" :src="contacts[0].avatar" alt="user avatar" class="img-fluid rounded-circle p-3">
+                            <span class="align-self-center">{{contacts[0].name}}</span>
                         </div>
                         <div class="col-4 offset-4 d-flex flex-row align-items-center gap-2 justify-content-end pe-4">
                             <div>😂</div>
@@ -69,7 +81,7 @@
                             <div>😂</div>
                         </div>
                     </div>
-                    <div class="mainRight">
+                    <div class="my-main-right">
 
                     </div>
                     <!-- FOOTER -->
