--- a/index.html
+++ b/index.html
@@ -22,18 +22,24 @@
                             <img id="my-personal-avatar" src="./img/avatar_io.jpg" alt="user avatar" class="img-fluid">
                             <span class="align-self-center">Sofia</span>
                         </div>
-                        <div class="col-4 offset-4 d-flex flex-row align-items-center gap-2 justify-content-end pe-4">
-                            <div>😂</div>
-                            <div>😂</div>
-                            <div>😂</div>
+                        <div class="col-4 offset-4 d-flex flex-row align-items-center gap-3 justify-content-end pe-4">
+                            <div><i class="fa-solid fa-circle-notch"></i></div>
+                            <div><i class="fa-solid fa-message"></i></div>
+                            <div><i class="fa-solid fa-ellipsis-vertical"></i></div>
                         </div>
                     </div>
                     <!-- LEFT MAIN -->
                     <div class="container">
                         <div class="row">
                             <!-- SPACE AZURE -->
-                            <div class="my-notification">
-
+                            <div class="my-notification d-flex align-items-center">
+                                <div class="d-flex justify-content-center align-items-center rounded-circle my-bg-notification">
+                                    <i class="fa-solid fa-bell-slash" style="color: #8edafc;"></i>
+                                </div>
+                                <div class="d-flex flex-column justify-content-center ms-4">
+                                    <span>Ricevi notifiche di nuovi messaggi</span>
+                                    <a href="#">Attiva notifiche desktop</a>
+                                </div>
                             </div>
                         </div>
                         <!-- SEARCH BAR -->
@@ -75,10 +81,10 @@
                             <img id="personalAvatar" :src="contacts[0].avatar" alt="user avatar" class="img-fluid rounded-circle p-3">
                             <span class="align-self-center">{{contacts[0].name}}</span>
                         </div>
-                        <div class="col-4 offset-4 d-flex flex-row align-items-center gap-2 justify-content-end pe-4">
-                            <div>😂</div>
-                            <div>😂</div>
-                            <div>😂</div>
+                        <div class="col-4 offset-4 d-flex flex-row align-items-center gap-3 justify-content-end pe-4">
+                            <div><i class="fa fa-search"></i></div>
+                            <div><i class="fa-solid fa-paperclip"></i></div>
+                            <div><i class="fa-solid fa-ellipsis-vertical"></i></div>
                         </div>
                     </div>
                     <div class="my-main-right">
