--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
                 <!-- SIDEBAR -->
                 <div class="col-4">
                     <!-- HEADER -->
-                    <div class="my-header-left d-flex justify-content-center">
+                    <section class="my-header-left d-flex justify-content-center">
                         <div class="col-4 d-flex">
                             <img id="my-personal-avatar" src="./img/avatar_io.jpg" alt="user avatar" class="img-fluid">
                             <span class="align-self-center">Sofia</span>
                         </div>
-                        <div class="col-4 offset-4 d-flex flex-row align-items-center gap-3 justify-content-end pe-4">
+                        <div class="col-4 offset-4 d-flex flex-row align-items-center gap-4 justify-content-end pe-4">
                             <div><i class="fa-solid fa-circle-notch"></i></div>
                             <div><i class="fa-solid fa-message"></i></div>
                             <div><i class="fa-solid fa-ellipsis-vertical"></i></div>
                         </div>
-                    </div>
+                    </section>
                     <!-- LEFT MAIN -->
-                    <div class="container">
+                    <section class="container">
                         <div class="row">
                             <!-- SPACE AZURE -->
                             <div class="my-notification d-flex align-items-center">
@@ -38,61 +38,74 @@
                                 </div>
                                 <div class="d-flex flex-column justify-content-center ms-4">
                                     <span>Ricevi notifiche di nuovi messaggi</span>
-                                    <a href="#">Attiva notifiche desktop</a>
+                                    <a href="#" class="my-link-color">Attiva notifiche desktop</a>
                                 </div>
                             </div>
                         </div>
                         <!-- SEARCH BAR -->
                         <div class="row d-flex justify-content-center align-items-center">
-                            <div class="col-12 bg-white">
+                            <div class="col-12 bg-white my-border">
                                 <div class="form">
                                     <i class="fa fa-search"></i>
                                     <input type="text" class="form-control form-input" placeholder="Cerca o inizia una nuova chat">
                                 </div>                     
                             </div>
                         </div>
-                    </div>
+                    </section>
                     <!-- CONTACTS -->
-                    <div class="container my-box">
+                    <section class="container my-box">
                         <div class="row">
-                            <div v-for="(contact, i) in contacts" class="my-contacts d-flex justify-content-between align-items-center">
-                                <div class="col-4">
-                                    <img :src="contacts[i].avatar" :alt="contacts[i].name" class="img-fluid">
-                                </div>
-                                <div class="col-6">
-                                    <div class="d-flex flex-column justify-content-center">
-                                        <span class="fw-bolder">{{contacts[i].name}}</span>
-                                        <span class="fontLastMessage">Ultimo messaggio inviato</span>
+                            <div v-for="(contact, i) in contacts" class="my-contacts d-flex">
+                                <div class="col-10 d-flex align-items-center">
+                                    <div class="col-3">
+                                        <img :src="contacts[i].avatar" :alt="contacts[i].name" class="img-fluid">
+                                    </div>
+                                    <div class="col-7 d-flex flex-column justify-content-center">
+                                        <span class="fw-normal">{{contacts[i].name}}</span>
+                                        <span class="my-font-small-color small">Ultimo messaggio inviato</span>
                                     </div>
                                 </div>
-                                <div class="col-2">
-                                    <div class="d-flex align-items-center justify-content-end">
-                                        <span>12:00</span>
-                                    </div>
+                                <div class="col-2 d-flex justify-content-end align-items-center">
+                                    <span class="my-font-small-color small">12:00</span>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </section>
                 </div>
+                <!-- RIGHT MAIN -->
                 <div class="col-8">
                     <!-- HEADER -->
-                    <div class="my-header-right d-flex justify-content-between">
+                    <section class="my-header-right d-flex justify-content-between">
                         <div class="col-4 d-flex">
                             <img id="personalAvatar" :src="contacts[0].avatar" alt="user avatar" class="img-fluid rounded-circle p-3">
                             <span class="align-self-center">{{contacts[0].name}}</span>
                         </div>
-                        <div class="col-4 offset-4 d-flex flex-row align-items-center gap-3 justify-content-end pe-4">
+                        <div class="col-4 offset-4 d-flex flex-row align-items-center gap-4 justify-content-end pe-4">
                             <div><i class="fa fa-search"></i></div>
                             <div><i class="fa-solid fa-paperclip"></i></div>
                             <div><i class="fa-solid fa-ellipsis-vertical"></i></div>
                         </div>
-                    </div>
-                    <div class="my-main-right">
+                    </section>
+                    <section class="my-main-right">
 
-                    </div>
+                    </section>
                     <!-- FOOTER -->
-                    <footer>
-                        
+                    <footer class="d-flex align-items-center justify-content-center">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-1 d-flex justify-content-center align-items-center">
+                                    <i class="fa-regular fa-face-smile"></i>
+                                </div>
+                                <div class="col-10">
+                                    <div class="form">
+                                        <input type="text" class="form-control" aria-label="Default" placeholder="Scrivi un messaggio" aria-describedby="inputGroup-sizing-default">
+                                    </div>       
+                                </div>
+                                <div class="col-1 d-flex justify-content-center align-items-center">
+                                    <i class="fa-solid fa-microphone"></i>
+                                </div>
+                            </div>
+                        </div>
                     </footer>
                 </div>
             </div>
