--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <!-- SIDEBAR -->
                 <div class="col-4">
                     <!-- HEADER -->
-                    <section class="my-header-left d-flex justify-content-center">
+                    <section class="my-header-left d-flex justify-content-center my-container-border">
                         <div class="col-4 d-flex">
                             <img id="my-personal-avatar" src="./img/avatar_io.jpg" alt="user avatar" class="img-fluid">
                             <span class="align-self-center">Sofia</span>
@@ -78,7 +78,10 @@
                     <section class="my-header-right d-flex justify-content-between">
                         <div class="col-4 d-flex">
                             <img id="personalAvatar" :src="contacts[0].avatar" alt="user avatar" class="img-fluid rounded-circle p-3">
-                            <span class="align-self-center">{{contacts[0].name}}</span>
+                            <div class="d-flex flex-column justify-content-center">
+                                <span>{{contacts[0].name}}</span>
+                                <span class="my-font-small-color small">Ultimo accesso oggi alle 12:00</span>
+                            </div>
                         </div>
                         <div class="col-4 offset-4 d-flex flex-row align-items-center gap-4 justify-content-end pe-4">
                             <div><i class="fa fa-search"></i></div>
