--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                     </section>
                     <!-- FOOTER -->
-                    <footer class="d-flex align-items-center justify-content-center">
+                    <footer class="d-flex align-items-center justify-content-center my-border-left">
                         <div class="container">
                             <div class="row">
                                 <div class="col-1 d-flex justify-content-center align-items-center">
