--- a/index.html
+++ b/index.html
@@ -90,7 +90,14 @@
                         </div>
                     </section>
                     <section class="my-main-right">
-
+                        <div class="my-conversation">
+                            <div class="p-3 d-flex justify-content-end">
+                                <span class="my-sent-message">ciao</span> 
+                            </div>
+                            <div class="p-3 d-flex justify-content-start">
+                                <span class="my-received-message">ciao</span>
+                            </div>
+                        </div>
                     </section>
                     <!-- FOOTER -->
                     <footer class="d-flex align-items-center justify-content-center my-border-left">
