--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     </div>
                                     <div class="col-7 d-flex flex-column justify-content-center">
                                         <span class="fw-normal">{{contact.name}}</span>
-                                        <span class="my-font-small-color small">Ultimo messaggio inviato</span>
+                                        <span class="my-font-small-color small">{{contact.messages[contact.messages.length - 1].message}}</span>
                                     </div>
                                 </div>
                                 <div class="col-2 d-flex justify-content-end align-items-center">
