--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                     </div>
                                 </div>
                                 <div class="col-2 d-flex justify-content-end align-items-center">
-                                    <span class="my-font-small-color small">12:00</span>
+                                    <span class="my-font-small-color small">{{contact.messages[contact.messages.length - 1].date}}</span>
                                 </div>
                             </div>
                         </div>
