--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                     <!-- HEADER -->
                     <section class="my-header-right d-flex justify-content-between">
                         <div class="col-4 d-flex">
-                            <img id="personalAvatar" :src="contacts[0].avatar" alt="user avatar" class="img-fluid rounded-circle p-3">
+                            <img id="personalAvatar" :src="contacts[currentChat].avatar" alt="user avatar" class="img-fluid rounded-circle p-3">
                             <div class="d-flex flex-column justify-content-center">
-                                <span>{{contacts[0].name}}</span>
+                                <span>{{contacts[currentChat].name}}</span>
                                 <span class="my-font-small-color small">Ultimo accesso oggi alle 12:00</span>
                             </div>
                         </div>
@@ -93,10 +93,10 @@
                     <section class="my-main-right">
                         <div class="my-conversation">
                             <div v-for="(message, i) in contacts[currentChat].messages">
-                                <div v-if="message.status === 'sent'" class="text-dark d-flex justify-content-end">
+                                <div v-if="message.status === 'sent'" class="d-flex justify-content-end">
                                     <span class="p-3 mb-2 my-sent-message">{{message.message}}</span> 
                                 </div>
-                                <div v-else class="text-dark d-flex justify-content-start">
+                                <div v-else class="d-flex justify-content-start">
                                     <span class="p-3 mb-2 my-received-message">{{message.message}}</span>
                                 </div>
                             </div>
